Pug, pub-bem, файловая структура

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-pug": "^4.0.1",
+    "gulp-pugbem": "^2.1.3"
+  }
 }
